webApp/libraries/style.css
.login-container {
    margin-top: 1%;
    margin-bottom: 5%;
}

#logTitle{
    text-align: center;
    margin-top: 0px; 
    color:white;
}

.sidenav {
    height: 100%;
    width: 160px;
    position: fixed;
    z-index: 0;
    top: 20;
    left: 0;
    background-color: #111;
    overflow-x: hidden;
    padding-top: 0px;
  }

  #helpPageContent {
    overflow-x: hidden;
    overflow-x: auto;
    width: 160vh;
    height: 80vh;
  }

  .sidenav a {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 20px;
    color: #818181;
    display: block;
  }

  .sidenav a:hover {
    color: #f1f1f1;
  }

.polaroid {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    text-align: center;
  }


  @media screen and (max-height: 450px) {
    .sidenav {
      padding-top: 15px;
    }

    .sidenav a {
      font-size: 18px;
    }
  }
  .main {
    margin-left: 160px;
    /* Same as the width of the sidenav */
    font-size: 28px;
    /* Increased text to enable scrolling */
    padding: 0px 10px;
    height: 100vh;

  }

.login-form-1 {
    padding: 3%;
    background: #0e4d92;
    border-radius: 30px;

    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
}

.login-form-1 h3 {
    text-align: center;
    margin-bottom: 12%;
    color: #fff;
}

.btnSubmit {
    font-weight: 600;
    width: 50%;
    color: #0e4d92;
    background-color: #fff;
    border: none;
    border-radius: 1.5rem;
    padding: 2%;
}

.btnRegister{
    font-weight: 600;
    width: 40%;
    color: white;
    background-color: #1b88fd;
    border: none;
    border-radius: 1.5rem;
    padding: 2%;
}
body{
    font-family: 'Roboto Condensed', sans-serif;
}

